AUTOMAKE_OPTIONS = foreign no-dependencies

noinst_LTLIBRARIES = libconfig.la

libconfig_la_CFLAGS =
libconfig_la_LDFLAGS = -avoid-version
libconfig_la_SOURCES = \
	libconfig.c libconfig.h \
	conf_apache.c conf_apache.h \
	conf_colon.c conf_colon.h \
	conf_equal.c conf_equal.h \
	conf_section.c conf_section.h \
	conf_space.c conf_space.h \
	conf_xml.c conf_xml.h \
	compat.h libconfig_private.h
